--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-aiohttp==3.12.15
-geopandas==1.1.1
+aiohttp==3.11.11
+cdsapi==0.7.7
+ee==0.4
+folium==0.20.0
+fsspec==2026.2.0
+geopandas==1.1.2
 loguru==0.7.3
-PyYAML==6.0.2
-requests==2.32.4
-shapely==2.1.1
-streamlit==1.48.0
-streamlit-card==1.0.2
-tqdm==4.67.1
-oci==2.155.1
-earthengine-api==1.3.0
+oci==2.139.0
+pyproj==3.7.2
+PyYAML==6.0.3
+rasterio==1.5.0
+Requests==2.32.5
+Shapely==2.1.2
+streamlit==1.54.0
+streamlit_file_browser==3.2.22
+streamlit_folium==0.26.1
+tqdm==4.66.5
