--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.11.11
 cdsapi==0.7.7
-ee==0.4
+earthengine-api==1.7.13
 folium==0.20.0
 fsspec==2026.2.0
 geopandas==1.1.2
@@ -8,7 +8,7 @@ loguru==0.7.3
 oci==2.139.0
 pyproj==3.7.2
 PyYAML==6.0.3
-rasterio==1.5.0
+rasterio==1.4.4
 Requests==2.32.5
 Shapely==2.1.2
 streamlit==1.54.0
